# video-frame-capture

./: .gitignore  Makefile  build.spec  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
src/video_frame_capture/: __init__.py  __main__.py
src/video_frame_capture/cli/: __init__.py  app.py
src/video_frame_capture/core/: exceptions.py  extraction_manager.py  frame_extractor.py  frame_selector.py  image_writer.py  models.py  video_parser.py
src/video_frame_capture/gui/: control_panel.py  i18n.py  main_window.py  toast.py  video_player.py
src/video_frame_capture/tests/: test_frame_selector.py  test_image_writer.py
src/video_frame_capture/web/: __init__.py  server.py
src/video_frame_capture/web/static/: app.js  style.css
src/video_frame_capture/web/templates/: base.html  index.html
