[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-frame-capture"
version = "0.1.0"
description = "视频帧截取工具 - 从视频中预览并提取静态图片"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
keywords = ["video", "frame", "capture", "ffmpeg", "pyqt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Graphics :: Capture",
]

dependencies = [
    "PyQt6>=6.5.0",
    "ffmpeg-python>=0.2.0",
    "imageio[ffmpeg]>=2.31.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
video-frame-capture = "video_frame_capture.__main__:main"

[project.gui-scripts]
video-frame-capture-gui = "video_frame_capture.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/video_frame_capture/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
