[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-frame-capture"
version = "0.2.0"
description = "视频帧截取工具 - 从视频中预览并提取静态图片"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
keywords = ["video", "frame", "capture", "ffmpeg", "pyqt", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]

dependencies = [
    "PyQt6>=6.5.0",
    "ffmpeg-python>=0.2.0",
    "imageio[ffmpeg]>=2.31.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
vfc-gui = "video_frame_capture.__main__:main"
vfc = "video_frame_capture.cli.app:main"
vfc-web = "video_frame_capture.web.server:main"

[project.gui-scripts]
video-frame-capture = "video_frame_capture.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/video_frame_capture/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
